--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         height = 400 - margin.top - margin.bottom;
 </script>
 
-<script src="C:\Users\yijie\OneDrive\Documents\SUTD\Trimester 2\Interactive Data Visualization\Final Project\js file 0.js"></script>
-<script src="C:\Users\yijie\OneDrive\Documents\SUTD\Trimester 2\Interactive Data Visualization\Final Project\js file 1.js"></script>
-<script src="C:\Users\yijie\OneDrive\Documents\SUTD\Trimester 2\Interactive Data Visualization\Final Project\js file 2.js"></script>
-<script src="C:\Users\yijie\OneDrive\Documents\SUTD\Trimester 2\Interactive Data Visualization\Final Project\js file 3.js"></script>
+<script src="js file 0.js"></script>
+<script src="js file 1.js"></script>
+<script src="js file 2.js"></script>
+<script src="js file 3.js"></script>
